--- a/Web.config
+++ b/Web.config
@@ -7,7 +7,29 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+	  <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
   </configSections>
+	<nlog xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+		<targets>
+			<target name="logfile" xsi:type="File"
+					maxArchiveFiles="10"
+					archiveAboveSize="5242880"
+					archiveEvery="Minute"
+					archiveNumbering="Sequence"
+					fileName="c:/FoodHubLogging/Log.txt"
+					layout="------${level}(${longdate})${machinename}------${newline}
+                      Exception Type:${exception:format=Type} |
+                      Exception Message:${exception:format=Message} |
+                      Stack Trace:${exception:format=Stack Trace} |
+                      Additional Info:${message}${newline}" />
+		</targets>
+		<rules>
+			<logger name="*" minlevel="Trace" writeTo="logfile" />
+		</rules>
+	</nlog>
+	
+	
+	
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -77,9 +99,7 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
   </system.webServer>
-  <!--<connectionStrings>
-    <add name="FoodHubEntities" connectionString="metadata=res://*/Models.FoodHubData.csdl|res://*/Models.FoodHubData.ssdl|res://*/Models.FoodHubData.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=S906718-W10;initial catalog=FoodHub;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>-->
+  
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -90,7 +110,9 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-<!--<connectionStrings>
+
+    
+<connectionStrings>
 	<add name="FoodHubEntities" connectionString="metadata=res://*/Models.FoodHubData.csdl|res://*/Models.FoodHubData.ssdl|res://*/Models.FoodHubData.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=S906718-W10;initial catalog=FoodHub;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-</connectionStrings>-->
-<connectionStrings><add name="FoodHubEntities" connectionString="metadata=res://*/Models.FoodHubData.csdl|res://*/Models.FoodHubData.ssdl|res://*/Models.FoodHubData.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=S906718-W10;initial catalog=FoodHub;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+</connectionStrings>
+</configuration>
